--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -67,7 +67,7 @@
     <string name="simple_renaming">简单重命名</string>
     <string name="pattern_renaming">图案</string>
     <string name="string_to_add">要添加的字符串</string>
-    <string name="rename_date_time_pattern">%Y - 年\n%M - 月\n%D - 日\n%h - 时\n%m - 分\n%s - 秒</string>
+    <string name="rename_date_time_pattern">%Y - 年\n%M - 月\n%D - 日\n%h - 时\n%m - 分\n%s - 秒\n%i - number increasing from 1</string>
 
     <!-- Copy / Move -->
     <string name="copy">复制</string>
