--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -67,7 +67,7 @@
     <string name="simple_renaming">Απλή μετονομασία</string>
     <string name="pattern_renaming">Μοτίβο</string>
     <string name="string_to_add">Συμβολοσειρά για προσθήκη</string>
-    <string name="rename_date_time_pattern">%Y - έτος\n%M - μήνας\n%D - ημέρα\n%h - ώρα\n%m - λεπτό\n%s - δευτ/το</string>
+    <string name="rename_date_time_pattern">%Y - έτος\n%M - μήνας\n%D - ημέρα\n%h - ώρα\n%m - λεπτό\n%s - δευτ/το\n%i - number increasing from 1</string>
 
     <!-- Copy / Move -->
     <string name="copy">Αντιγραφή</string>
