--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -67,7 +67,7 @@
     <string name="simple_renaming">Eenvoudig hernoemen</string>
     <string name="pattern_renaming">Patroon</string>
     <string name="string_to_add">Tekens toevoegen</string>
-    <string name="rename_date_time_pattern">%Y - jaar\n%M - maand\n%D - dag\n%h - uur\n%m - minuut\n%s - seconde\n%i - number increasing from 1</string>
+    <string name="rename_date_time_pattern">%Y - jaar\n%M - maand\n%D - dag\n%h - uur\n%m - minuut\n%s - seconde\n%i - getal oplopend vanaf 1</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiëren</string>
