rename_date_time_pattern

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -67,7 +67,7 @@
     <string name="simple_renaming">Simple omdøbning</string>
     <string name="pattern_renaming">Mønster</string>
     <string name="string_to_add">Tekststreng der skal tilføjes</string>
-    <string name="rename_date_time_pattern">%Y - år\n%M - måned\n%D - dag\n%h - time\n%m - minut\n%s - sekund\n%i - number increasing from 1</string>
+    <string name="rename_date_time_pattern">%Y - år\n%M - måned\n%D - dag\n%h - time\n%m - minut\n%s - sekund\n%i - tal stigende fra 1</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopier</string>
