update one zh-CN tring

--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -252,7 +252,7 @@
     <string name="move_to_recycle_bin_confirmation">你确定要移动 %s到回收站？</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
     <string name="are_you_sure_delete">你确定要删除此项目吗？</string>
     <string name="are_you_sure_recycle_bin">你确定要移动此项目到回收站吗？</string>
-    <string name="do_not_ask_again">不再提醒</string>
+    <string name="do_not_ask_again">重启前不再提醒</string>
     <string name="yes">是</string>
     <string name="no">否</string>
     <string name="maybe">也许</string>
