--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -67,7 +67,7 @@
     <string name="simple_renaming">Ubah nama</string>
     <string name="pattern_renaming">Pola</string>
     <string name="string_to_add">Kata untuk ditambahkan</string>
-    <string name="rename_date_time_pattern">%Y - tahun\n%M - bulan\n%D - hari\n%h - jam\n%m - menit\n%s - detik\n%i - number increasing from 1</string>
+    <string name="rename_date_time_pattern">%Y - tahun\n%M - bulan\n%D - hari\n%h - jam\n%m - menit\n%s - detik\n%i - angka bertambah mulai dari 1</string>
 
     <!-- Copy / Move -->
     <string name="copy">Salin</string>
