--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -67,7 +67,7 @@
     <string name="simple_renaming">簡易重新命名</string>
     <string name="pattern_renaming">格式重新命名</string>
     <string name="string_to_add">添加文字</string>
-    <string name="rename_date_time_pattern">%Y - 年\n%M - 月\n%D - 日\n%h - 小時\n%m - 分鐘\n%s - 秒鐘\n%i - number increasing from 1</string>
+    <string name="rename_date_time_pattern">%Y - 年\n%M - 月\n%D - 日\n%h - 小時\n%m - 分鐘\n%s - 秒鐘\n%i - 數字從1增加起</string>
 
     <!-- Copy / Move -->
     <string name="copy">複製</string>
