--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -234,7 +234,7 @@
     <string name="create_shortcut">Créer un raccourci</string>
 
     <!-- Sorting -->
-    <string name="sort_by">Trier par</string>
+    <string name="sort_by">Trier par...</string>
     <string name="name">Nom</string>
     <string name="size">Dimension</string>
     <string name="last_modified">Date de modification</string>
